<resources>
    <string name="app_name">RightToBeauty</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log in</string>
    <string name="login_signup">LogIn / SignUp</string>
    <string name="fontMontez">neuropol.ttf</string>
    <string name="fontSemiBold">Raleway-SemiBold.ttf</string>
    <string name="fontBold">Raleway-Bold.ttf</string>
    <string name="fontRegular">Raleway-Regular.ttf</string>
    <string name="title_activity_dashboard">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="parlor">Parlour</string>
    <string name="wallet">Wallet</string>
    <string name="booking">Booking</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="our_services">Our Services</string>
    <string name="api_base_url">http://192.168.1.100/</string>
    <string name="website_base_url">http://192.168.1.100/right_to_beauty/</string>
    <string name="user_reviews">Our Client Reviews</string>
    <string name="service_des">Service description</string>
    <string name="dash">-</string>
    <string-array name="state"><item>state</item></string-array>
    <string-array name="city"><item>city</item></string-array>
    <string-array name="area"><item>area</item></string-array>
    <string name="interiar_facilities">Interiar Facilities</string>
    <string name="owner">Owner</string>
    <string name="contact_us">Contact us</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_id">Enter Id Here</string>
    <string name="name">Full Name</string>
    <string name="welcome">welcome\nto</string>
    <string name="rtb">R T B</string>
    <string name="hundred_of_services">Hundreds of\nservices</string>
    <string name="take_appointments">Take\nappointments</string>
    <string name="explore">explore</string>
    <string name="preference_file_name">in.myrtb.PreferenceFile</string>
    <string name="preference_key_first_time">in.myrtb.FirstTime</string>
    <string name="preference_key_first_time_login">in.myrtb.FirstTimeLogin</string>
    <string name="do_it_later">OK, I\'ll do it later</string>
    <string name="no_internet_connection">no internet connection</string>

</resources>
