<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/particular_parlor_contact_us_layout"
    android:layout_margin="10dp"
    android:layout_marginEnd="5dp"
    android:layout_marginStart="10dp"
    android:layout_marginTop="20dp"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    app:cardCornerRadius="0dp"
    app:cardElevation="15dp"
    android:layout_marginRight="5dp"
    android:layout_marginLeft="10dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <in.co.halexo.angry.righttobeauty.custom_textview.sCustomTextViewRaleway
            android:id="@+id/particular_parlor_contact_us_owner_text"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/owner"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/particular_parlor_contact_us_contact_text"
            app:layout_constraintEnd_toStartOf="@+id/particular_parlor_contact_us_owner_name"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside"
            android:gravity="start" />

        <in.co.halexo.angry.righttobeauty.custom_textview.sCustomTextViewRaleway
            android:id="@+id/particular_parlor_contact_us_owner_dash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dash"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/particular_parlor_contact_us_owner_text"
            app:layout_constraintEnd_toStartOf="@+id/particular_parlor_contact_us_owner_name"
            app:layout_constraintHorizontal_bias="0.484"
            app:layout_constraintStart_toEndOf="@+id/particular_parlor_contact_us_owner_text"
            android:gravity="start" />

        <in.co.halexo.angry.righttobeauty.custom_textview.sCustomTextViewRaleway
            android:id="@+id/particular_parlor_contact_us_owner_name"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/owner"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/particular_parlor_contact_us_owner_dash"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/particular_parlor_contact_us_owner_text"
            android:gravity="start" />

        <in.co.halexo.angry.righttobeauty.custom_textview.sCustomTextViewRaleway
            android:id="@+id/particular_parlor_contact_us_contact_text"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/phone"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/particular_parlor_contact_us_email_text"
            app:layout_constraintEnd_toStartOf="@+id/particular_parlor_contact_us_contact_number"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/particular_parlor_contact_us_owner_text"
            android:gravity="start" />

        <in.co.halexo.angry.righttobeauty.custom_textview.sCustomTextViewRaleway
            android:id="@+id/particular_parlor_contact_us_contact_dash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dash"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/particular_parlor_contact_us_contact_text"
            app:layout_constraintEnd_toStartOf="@+id/particular_parlor_contact_us_contact_number"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/particular_parlor_contact_us_contact_text"
            android:gravity="start" />

        <in.co.halexo.angry.righttobeauty.custom_textview.sCustomTextViewRaleway
            android:id="@+id/particular_parlor_contact_us_contact_number"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@id/particular_parlor_contact_us_contact_dash"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/particular_parlor_contact_us_contact_text"
            android:gravity="start" />

        <in.co.halexo.angry.righttobeauty.custom_textview.sCustomTextViewRaleway
            android:id="@+id/particular_parlor_contact_us_email_text"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/email"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/particular_parlor_contact_us_email_address"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/particular_parlor_contact_us_contact_text"
            android:gravity="start" />

        <in.co.halexo.angry.righttobeauty.custom_textview.sCustomTextViewRaleway
            android:id="@+id/particular_parlor_contact_us_email_dash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dash"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@id/particular_parlor_contact_us_email_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/particular_parlor_contact_us_email_address"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/particular_parlor_contact_us_email_text"
            android:gravity="start" />

        <in.co.halexo.angry.righttobeauty.custom_textview.sCustomTextViewRaleway
            android:id="@+id/particular_parlor_contact_us_email_address"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="68dp"
            android:text="@string/email"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@id/particular_parlor_contact_us_email_dash"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/particular_parlor_contact_us_email_text"
            android:gravity="start" />
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>